--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+## ALE
+
+ale
+build
+doc/examples/*Example
+
+## Generic
+
 # Emacs temp files
 *~
 .*
@@ -19,3 +27,6 @@
 *.lai
 *.la
 *.a
+
+# Python bytecode
+*.pyc
